--- a/assets/tools/text64/index.css
+++ b/assets/tools/text64/index.css
@@ -2,43 +2,37 @@ html,body{
   margin:0;
   width:100%;
   height:100%;
-  background-image: radial-gradient(at center,#0cf,#05f);
+  background:radial-gradient(circle at center,#afa4d4,#3e7cec);
   display:flex;
   align-items:center;
   justify-content:center;
-  box-shadow:0 0 15px 3px rgba(0,0,0,0.3) inset;
 }
 .app{
   min-width:300px;
-  background:rgba(0,0,0,0.3);
+  background:#444;
   border-radius:10px;
-  box-shadow:
-  0 0 15px 3px rgba(0,0,0,0.3) inset,
-  0 0 25px 5px rgba(0,0,0,0.3);
   padding:10px;
-}
-button:active{
-  box-shadow:0 0 0 #fff;
-  transform:translateY(7px);
 }
 button{
 width:130px;
 height:40px;
-background:#00e2ff;
-border:1px solid #f50;
+background:#444;
+border:1px solid #09f;
 margin:5px;
 border-radius:5px;
-box-shadow:0 7px 1px #f50;
 font-size:15pt;
-outline:0
+outline:0;
+color: #09f;
 }
 .app textarea{
   width:90%;
   height:300px;
-  background:#fff;
-border:1px solid #f50;
+  background:#444;
+border:1px solid #09f;
 margin:5px;
+padding:5px;
 border-radius:5px;
 font-size:15px;
-outline:0
+outline:0;
+color: #fff;
 }
