--- a/assets/tools/index.css
+++ b/assets/tools/index.css
@@ -16,6 +16,8 @@ html, body{
   padding:10px 0;
   background:rgba(0,0,0,0.3);
   border-radius:10px;
+  box-shadow:0 0 15px 3px rgba(0,0,0,0.3) inset,
+  0 0 25px 5px rgba(0,0,0,0.3);
   color:#09f;
   display:flex;
   align-items:center;
@@ -40,6 +42,9 @@ html, body{
   background:#fff;
   font-size: 20px;
   display:inline-block;
+  box-shadow:
+  0 0 10px 2px rgba(0,0,0,0.3),
+  0 0 10px 2px rgba(0,0,0,0.3) inset;
 }
 .none{
   opacity:0 !important;
@@ -76,6 +81,7 @@ html, body{
   width: 100%;
   height: 100%;
   overflow:hidden;
+  
 }
 iframe{
   width:100%;
